<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.LoginActivity">


    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="141dp"
        android:text="@string/login"
        android:contentDescription="@string/login_header"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="298dp"
        android:layout_height="59dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="57dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRecoverButton" />

    <EditText
        android:id="@+id/email"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="58dp"
        android:width="250dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/loginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        android:autofillHints="Email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="295dp"
        android:layout_height="55dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="58dp"
        android:width="250dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="Password" />

    <Button
        android:id="@+id/registerButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="93dp"
        android:text="@string/loginRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerText"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="1dp"
        android:text="@string/no_account"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/passwordRecoverButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/passwordRecovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=""
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>
