...
        android:layout_marginStart="74dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="73dp"
        android:text="@string/deleteListing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="264dp"
        android:layout_height="49dp"
        android:layout_marginStart="74dp"
...
