<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/address_search_border"
        android:padding="1dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />

    </FrameLayout>

    <Button
    android:id="@+id/confirm_location_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/confirm_location"
    android:layout_alignParentBottom="true"
    android:layout_margin="16dp" />

</RelativeLayout>
