...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.PasswordRecoveryActivity">

    <TextView
        android:id="@+id/passwordReset"
        android:layout_width="281dp"
        android:layout_height="117dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="61dp"
        android:text="@string/recoverPage"
...
