...
    <string name="email">Email</string>
    <string name="accountAlreadyMessage">Already have an account?</string>
    <string name="lastName">Last Name</string>
    <string name="roleSelectPrompt">Select a Role:</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="passwordRequirement">Password must be at least 6 characters.</string>
    <string name="login">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginRegister">Register</string>
    <string name="passwordRecovery">Forgot Password</string>
    <string name="recoverPage">Password Recovery</string>
...
